0.8.0 (currently working on)
- [#2828] Fix: No registration created for event with unlimited number of seats
- [#2800] Feature: Add time-slot model and mapper
- [#2789] Change: Move the formidable configuration from XML to TypoScript setup
- [#2827] Fix: mod2: Remove $this->doc->form = '<form action="" method="post">';
- [#2493] Change: Rename mod2 to BackEnd
- [#2753] Feature: Add speaker model and mapper
- [#2820] Fix: Events with unlimited Vacancies have red square
- [#2819] Fix: Events with no Date get red square
- [#2822] Fix: Uninitialized variable reads in some pi1 tests
- [#2817] Fix: Unit test failures in tx_seminars_seminarchild_testcase
- [#2805] Feature: For events with an unlimited number of seats, show an empty string in the vacancies column
- [#2815] Fix: Registration Link is hidden and fully booked string is shown when an event has unlimited vacancies
- [#2803] Change: Hide registration-related fields in the BE seminar editor if the seminar does not need registration
- [#2799] Change: Don't display the red/yellow/green square for events that have started or lie in the past
- [#2813] Change: <label for=""> does not use the values of the id attributes
- [#2804] Feature: Use a different link text for the registration link if the event has no date
- [#2698] Feature: Re-add the checkbox "needs registration"
- [#2474] Change: Use function FrontEndUser::hasGroupMembership
- [#1571] Feature: Add a description to the content wizard
- [#2787] Change: Registration heading should have two markers for title and date
- [#2786] Fix: Subpart REGISTRATION_BOTTOM is not rendered if there's only an error message
- [#2782] Feature: Add lodging model and mapper
- [#2781] Feature: Add food model and mapper
- [#2779] Feature: Add checkbox model and mapper
- [#2778] Feature: Add payment method model and mapper
- [#2777] Feature: Add target group model and mapper
- [#2776] Feature: Add event type model and mapper
- [#2686] Fix: Rename and clean up the e-mail template